#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-34
2015-03-20 Mikhail S. Dubrovin	
- GeometryObject - delete and make new array poimters only if array size is changing (PSAS-11)
	
2015-03-10 Mikhail S. Dubrovin	
- GeometryAccess - add ref_img_from_pixel_arrays method which returns image as a reference to memeber data (PSAS-11)

Tag: V00-02-33
2015-02-20 Mikhail S. Dubrovin	
- CalibFileFinder.py - in method findCalibFileadd add protection for run numbers > 9999 (PSAS-111)
	
Tag: V00-02-32
2015-02-17 Mikhail S. Dubrovin	
- In GeometryAccess, GeometryObject, SegGeometryMatrixV1 - improve memory management (PSAS-34)
- In GeometryObject add parameter do_eval in get_pixel_coords(...) and evaluate_pixel_coords(...)

Tag: V00-02-31
2015-02-12 Mikhail S. Dubrovin	
- GeometryObject - add method get_geo_pars (PSAS-11)
	
Tag: V00-02-30
2015-01-23 Mikhail S. Dubrovin	
- GeometryObject.det_shape(...) - comment print for debugging
- SegGeometryMatrixV1.cpp - in pixel_mask_array(...) fix logical bug (order of logical operations)
- SegGeometryMatrixV1.py - for matrix-like coordinate system have to use ymesh, xmesh = np.meshgrid(y,x)
	
Tag: V00-02-29
2015-01-22 Mikhail S. Dubrovin	
- add SegGeometryMatrixV1.py/ccp/h - add PNCCD in SegGeometryStore (PSAS-94)
	
Tag: V00-02-28
2015-01-09 Mikhail S. Dubrovin	
- GeometryObject (C++) - fix minor issue with update of coordinate eveluation

Tag: V00-02-27
2015-01-09 Mikhail S. Dubrovin	
- GeometryAccess & GeometryObject (C++ & py) - propagate do-tilt parameter 
	from get_pix_coords and get_pix_coord_indexes to transform_geo_coord_arrays (PSAS-11)

Tag: V00-02-26
2014-11-21 Mikhail S. Dubrovin	