@@ -46,22 +46,19 @@ namespace PSCalib {
  *  @see CalibFileFinder
  *
  *  Calibration parameters are stored in ndarray<TYPE, NDIM>, where TYPE and NDIM are defined idividually for each type of calibration parameters.
- *
  */
 
 //----------------
 
-enum CALIB_TYPE { PEDESTALS=0, PIXEL_STATUS, PIXEL_RMS, PIXEL_GAIN, COMMON_MODE };
+enum CALIB_TYPE { PEDESTALS=0, PIXEL_STATUS, PIXEL_RMS, PIXEL_GAIN, PIXEL_MASK, PIXEL_BKGD, COMMON_MODE };
 
 class CalibPars  {
 public:
-
 
   typedef unsigned shape_t;
   typedef float    pixel_nrms_t;
   typedef float    pixel_bkgd_t;
   typedef uint16_t pixel_mask_t;
-
   typedef uint16_t pixel_status_t;
   typedef double   common_mode_t;
   typedef float    pedestals_t;
@@ -73,13 +70,6 @@ public:
   // Destructor
   virtual ~CalibPars () {}
 
-  //typedef pdscalibdata::PnccdPixelStatusV1::pars_t pixel_status_t;
-  //typedef pdscalibdata::PnccdCommonModeV1::pars_t  common_mode_t;
-  //typedef pdscalibdata::PnccdPedestalsV1::pars_t   pedestals_t;
-  //typedef pdscalibdata::PnccdPixelGainV1::pars_t   pixel_gain_t;
-  //typedef pdscalibdata::PnccdPixelRmsV1::pars_t    pixel_rms_t;
-
-
   // NOTE1: THE METHOD DECLARED AS
   // virtual ndarray<pedestals_t, 1> pedestals() = 0; IS PURE VIRTUAL,
   // THIS IS NOT OVERLOADABLE BECAUSE THE METHOD SIGNATURE IS DEFINED BY INPUT PARS IN RHS
@@ -88,13 +78,13 @@ public:
   //        OR IT SHOULD NOT BE "PURE" VIRTUAL, BUT JUST A VIRUAL
 
   /// Returns number of dimensions in ndarray
-  virtual const size_t ndim();
+  virtual const size_t ndim(const CALIB_TYPE& calibtype=PEDESTALS);
 
   /// Returns size (number of elements) in calibration type
-  virtual const size_t size();
+  virtual const size_t size(const CALIB_TYPE& calibtype=PEDESTALS);
 
   /// Returns shape of the ndarray with calibration parameters
-  virtual const shape_t* shape();
+  virtual const shape_t* shape(const CALIB_TYPE& calibtype=PEDESTALS);
 
   /// Returns the pointer to array with pedestals 
   virtual const pedestals_t* pedestals();
@@ -107,6 +97,12 @@ public:
 
   /// Returns the pointer to array with pixel_gain 
   virtual const pixel_rms_t* pixel_rms();
+
+  /// Returns the pointer to array with pixel_mask 
+  virtual const pixel_mask_t* pixel_mask();
+
+  /// Returns the pointer to array with pixel_mask 
+  virtual const pixel_bkgd_t* pixel_bkgd();
 
   /// Returns the pointer to array with common_mode 
   virtual const common_mode_t* common_mode();
